[metadata]
name = evcc
version = 0.0.1
author = RustyDust
description = "evcc access via API"
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/rustydust/python_evcc
project_urls =
    Issue Tracker = https://github.com/rustydust/python_evcc/issues
classifiers = 
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent
    Environment :: Console
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
package_dir = 
    = .
packages = find:
include_package_data = True
python_requires = >= 3.8
install_requires =
    requests

[options.packages.find]
where=evcc
